@@ -1,0 +1,1 @@
+id ICON "xournal.ico"
